<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/slategray">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDesc"
        android:textSize="20sp" android:textColor="@color/white"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvQuiz"
            android:textSize="20sp" android:textStyle="bold" android:textColor="@color/black"/>
        <EditText android:id="@+id/id_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/etIngresarQ"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvExpo"
            android:textSize="20sp" android:textStyle="bold" android:textColor="@color/black"/>
        <EditText android:id="@+id/id_expo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/etIngresarE"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvLab"
            android:textSize="20sp" android:textStyle="bold" android:textColor="@color/black"/>
        <EditText android:id="@+id/id_lab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/etIngresarL"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvfinal"
            android:textSize="20sp" android:textStyle="bold" android:textColor="@color/black"/>
        <EditText android:id="@+id/id_final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/etIngresarF"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <Button android:id="@+id/id_btnCalc"
        android:layout_width="wrap_content" android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@color/brown"
        android:text="@string/btnCalcular"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView android:layout_gravity="center_vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNota_final"
            android:textSize="30sp" android:textStyle="bold" android:textColor="@color/black"/>
        <TextView android:id="@+id/id_Nota_final"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:hint="@string/etAquiNota"/>
    </LinearLayout>


</LinearLayout>
